Version 0.8.2 "Taunoa" -- Subversion 
-----------------

* Fixed htaccess.txt to point to a better url

Version 0.8.1 "Papeete" -- Sat Jan 01 2005 
-----------------

* Fixed bugs with upgrading
* Fixed html blobs
* Fixed bug with preview path

Version 0.8 "Tahiti" -- Sat Jan 01 2005 
-----------------

* Added Norwegian translation (Roger 'Stigma' Knutsen)
* Added FCKeditor capability via module (not included)
* Added TinyMCE capability via module (included)
* Added versionname plugin
* Added many many module API callbacks
* Admin and default website are totally xhtml 1.0 transitional compliant
* Admin menu now only shows items that the user could have access to
* Cleaned up root directory by moving things to modules and the lib
directory
* Moved HTMLArea to a module (not included)
* Moved dhtmlmenu plugin to PHPLayers module in order to fix xhtml issues
* Rewrote all content handling from scratch for better expandibility
* Updated Traditional Chinese translation (gobido)

Version 0.7.3 -- Tue Nov 23 2004
-----------------

* Added Italian translation (emanuelez)
* Added more callback functions to module API
* Added config.php option to disable sending translations to htmlarea 
(#000049)
* Added active/inactive toggle in Content Management (Xorn725)
* Added categories and other fixes to the News module (calguy1000)
* Added breadcrumbs and sitemap plugins (Manarth)
* Added clear cache button to site preferences (#000055)
* Fixed syntax highlighting not submitting data of second textarea.
* Fixed HTMLArea to display properly with all languages, even if some
still default to en_US
* Fixed bug with handling of aliases in add/editcontent
* Fixed bug with relative paths in dhtmlmenu
* Fixed changing ownership of html blobs
* Fixed displaying html_blobs in modules with executeuser
* Fixed HTML bug in print module (#000048)
* Fixed error message with Deleting templates (Part of #000047)
* Fixed check_ownership and check_authorship to be more consistant 
(Xorn725)